--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -3821,6 +3821,11 @@ Not expressible in DL
 
 \section{Evaluation}
 
+We evaluated to which extend the most promising five DSCLs fulfill each requirement.
+Tilde means that this constraint may be fulfilled by that particular constraint language - either by limitations, workarounds, or extensions.
+We also evaluated if a specific constraint is fulfilled by OWL 2 QL or if the more expressive OWL 2 DL is needed. 
+Inferencing may be performed prior to validating constraints. This is marked with an asterisk.
+
 \begin{evaluation}
 *Subsumption & \ding{55} & $\checkmark$ & $\checkmark$ & $\sim$ & $\checkmark$ & $\checkmark$ \\
 *Class Equivalence & \ding{55} & $\checkmark$ & $\checkmark$ & \ding{55} & \ding{55} & $\checkmark$ \\
