some related work and other small things

--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -593,3 +593,59 @@
   Timestamp                = {2014.11.08}
 }
 
+@incollection{tsarkov2006fact++,
+  title={{FaCT++ description logic reasoner: System description}},
+  author={Tsarkov, Dmitry and Horrocks, Ian},
+  booktitle={Automated reasoning},
+  pages={292--297},
+  year={2006},
+  publisher={Springer}
+}
+@article{sirin2007pellet,
+  title={{Pellet: A practical owl-dl reasoner}},
+  author={Sirin, Evren and Parsia, Bijan and Grau, Bernardo Cuenca and Kalyanpur, Aditya and Katz, Yarden},
+  journal={Web Semantics: science, services and agents on the World Wide Web},
+  volume={5},
+  number={2},
+  pages={51--53},
+  year={2007},
+  publisher={Elsevier}
+}
+@incollection{haarslev2001racer,
+  title={{RACER system description}},
+  author={Haarslev, Volker and M{\"u}ller, Ralf},
+  booktitle={Automated Reasoning},
+  pages={701--705},
+  year={2001},
+  publisher={Springer}
+}
+@inproceedings{horrocks2012hermit,
+  title={{The HermiT OWL Reasoner}},
+  author={Horrocks, Ian and Motik, Boris and Wang, Zhe},
+  booktitle={Proceedings of the 1st International Workshop on OWL Reasoner Evaluation (ORE-2012), Manchester, UK},
+  year={2012}
+}
+@inproceedings{kontchakov2011combined,
+  title={{The combined approach to ontology-based data access}},
+  author={Kontchakov, Rinnan and Lutz, Carsten and Toman, David and Wolter, Frank and Zakharyaschev, Michael},
+  booktitle={Proceedings of the Twenty-Second international joint conference on Artificial Intelligence-Volume Volume Three},
+  pages={2656--2661},
+  year={2011},
+  publisher={AAAI Press}
+}
+@incollection{nolle2014efficient,
+  title={Efficient Federated Debugging of Lightweight Ontologies},
+  author={Nolle, Andreas and Meilicke, Christian and Stuckenschmidt, Heiner and Nemirovski, German},
+  booktitle={Web Reasoning and Rule Systems},
+  pages={206--215},
+  year={2014},
+  publisher={Springer International Publishing}
+}
+@inproceedings{nolle2013elite,
+  title={ELITE: An Entailment-based Federated Query Engine for Complete and Transparent Semantic Data Integration},
+  author={Nolle, Andreas and Nemirovski, German},
+  booktitle={Proceedings of the 26th International Workshop on Description Logics},
+  pages={854--867},
+  year={2013},
+  publisher={CEUR Electronic Workshop Proceedings}
+}
