--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -319,10 +319,6 @@ Another point is that, if we perform RDF validation without reasoning, we will g
 Reasoning makes sense before actually validating constraints.
 Reasoning, which is the core service provided by OWL,
 and constraint validation are very closely related. 
-\an{maybe we can use also the term 'User-defined Consistency' described in 'see below' as a further 'hook' to establish our approach?}
-\url{http://www.aifb.kit.edu/images/d/d2/2005_925_Haase_Consistent_Evol_1.pdf}
-\tb{Andy, can you describe this in the paper?}
-\an{a more formal example would be nice! ;)}
 Reasoning is the process of determining what follows from what has been
 stated.  Reasoning ranges from simple (students are people, John is a
 student, therefore John is a person) to the very complex. Reasoning can
@@ -690,11 +686,7 @@ Without reasoning, these constraints won't be validated as \ms{Luke} is not with
 
 For the majority of the requirements to formulate RDF constraints, reasoning is not related to the constraints and is therefore not needed to be performed prior to validation. 
 It is also possible, however, to reason before validating constraints for which reasoning does not affect validation results.
-If we do reasoning by query rewriting in terms of backward chaining and if we run a constraint validation query through an engine like --ontop-- (OBDA tool) or ELITE (federated query engine), the engine will only do some rewritings if it is possible, and if you just check e.g. pattern matching there will be no rewriting.
-
-\tb{Andy, I inserted your comments here. may you have a look at it?}
-
-%\an{If we do reasoning by query rewriting in terms of backward chaining we don't need to distinguish between them, because if you run a constraint validation query through an engine like --ontop-- (OBDA tool) or ELITE (federated query engine), the engine will only do some rewritings if it is possible, and if you just check e.g. pattern matching there will be no rewriting...}
+If we do reasoning by query rewriting in terms of backward chaining and if we run a constraint validation query through an engine like the --ontop-- framework\footnote{\url{http://ontop.inf.unibz.it}} or ELITE (federated query engine) \cite{nolle2013elite}, the engine will only do some rewritings if it is possible, and if you just check e.g. pattern matching there will be no rewriting.
 
 \subsubsection{Expressible by OWL 2 QL}
 
@@ -870,7 +862,7 @@ validation environment in which the validation of any DSCL\footnote{the only lim
 The validation implementation of DSCLs is fully declarative,
 consisting of a mapping from a DSCL to SPIN in form of SPARQL CONSTRUCT queries.
 SPIN represents both the SPIN mappings and the SPARQL queries in RDF. 
-Within the validation environment, we fully implemented an automatic validation of all OWL 2 DL\footnote{and therefore all OWL 2 QL constructs} constructs. 
+Within the validation environment, we fully implemented an automatic RDF validation of all OWL 2 DL\footnote{and therefore all OWL 2 QL constructs} constructs. 
 \an{you should mention at this point that this validation is in terms of RDF validation, because inconsistency can't be done completely}
 The implementation can be tested at \url{http://purl.org/net/rdfval-demo} and
 the OWL 2 SPIN mapping is maintained at \url{https://github.com/boschthomas/OWL2-SPIN-Mapping}.
@@ -902,7 +894,8 @@ However, this OWL IC semantics was never submitted to a standards organization.
 	\item Clark Parsia had previously proposed the ICV semantics for OWL, but this was not submitted to W3C.
 \end{itemize}
 
-\tb{ToDo for Andy: validation in terms of inconsistency detection}
+In description logics, reasoning tasks like query answering or detection of inconsistencies require the consideration of knowledge that is not only defined explicitly but also implicitly. To do so there are two different ways called forward- and backward-chaining. The first implies a materialized knowledge base, where the original knowledge base is extended by all assertions that can be inferred. State-of-the-art DL or OWL reasoners that following this approach are e.g. FaCT++ \cite{tsarkov2006fact++}, Pellet \cite{sirin2007pellet},  RacerPro \cite{haarslev2001racer}, or HermiT \cite{horrocks2012hermit}. On the second approach, the original knowledge base is kept in its original state and before queries are evaluated against the knowledge base, the queries will be rewritten such that its rewritings will consider also the implicit knowledge in the returned result set. Approaches following this way are e.g., \textsf{PerfectRef} given by Calvanese et al. \cite{Calvanese2007} or \textsf{TreeWitness} proposed by Kontchakov et al. \cite{kontchakov2011combined}. The choice between these two different ways depends on the specific application case. So the first kind is probably applied on local knowledge bases whereas the second is more appropriated for federative environments like in \cite{nolle2014efficient, nolle2013elite}.
+
 
 \section{Conclusion and Future Work}
 
