expressivity complexity diagram

--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -492,7 +492,7 @@ which we define as follows:
 \begin{itemize}
 	\item \ms{Expr-R-OWL2-QL}: OWL 2 QL reasoning axioms
 	\item \ms{Expr-R-OWL2-DL}: OWL 2 DL reasoning axioms
-	\item \ms{Expr-R}: reasoning constraints not supported by OWL
+	\item \ms{Expr-R}: reasoning axioms not supported by OWL
 	\item \ms{Expr-C}: constraints without reasoning
 \end{itemize}
 
@@ -588,6 +588,14 @@ Figure~\ref{fig:VennDiagram}.
 \end{figure}
 
 \tb{adapt venn diagramm: expressivity classes, DSCL ordering, user-fiendliness}
+
+Figure~\ref{fig:ExpressivityComplexity}.  
+\begin{figure}
+	\centering
+		\includegraphics[width=1.00\textwidth]{expressivity-complexity-3.png}
+	\caption{Expressivity and Complexity}
+	\label{fig:ExpressivityComplexity}
+\end{figure}
 
 \section{RDF validation requirements}
 
