expressivity complexity diagram

--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -186,7 +186,7 @@ Albstadt-Sigmaringen University, Germany \\
 \maketitle              % typeset the title of the contribution
 
 \begin{abstract}
-
+\textcolor{red}{ToDo}
 
 \keywords{RDF Validation, RDF Constraints, OWL 2 QL, OWL 2 DL, Reasoning, RDF Validation Requirements, Linked Data, Semantic Web}
 \end{abstract}
@@ -207,6 +207,8 @@ keywords as part of the title
 	\item reasoning
 	\item Choosing Your RDF Constraint Language According to Expressivity, Complexity, and User-Friendliness
 	\item OWL 2 as Constraint Language for RDF Validation
+	\item Classification of RDF Validation Constraint Languages According to Expressivity, Complexity, and User-Friendliness 
+	\item RDF Validation - Classification of Constraint Languages According to Expressivity, Complexity, and User-Friendliness 
 \end{itemize}
 
 \section{Introduction}
