--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -573,33 +573,33 @@ The complexity classes' partial ordering is:
 \subsection{Classification Dimension User-Friendliness}
 
 We cannot formally measure the user-friendliness of DSCLs as in the case of expressivity and complexity. 
-Rather subjective criteria to determine the degree of user-friendliness of DSCLs are:
+Criteria to determine the degree of user-friendliness of DSCLs lead to four user-friendliness classes of DSCLs:
 
 \begin{itemize}
-	\item \ms{constraint formulation level}: low-level (\ding{55}) vs. high-level ($\checkmark$)
-	\item \ms{intuitiveness}: not intuitive (\ding{55}) $<$ less intuitive ($\sim$) $<$ intuitive ($\checkmark$)
-	\item \ms{conciseness}: not concise (\ding{55}) $<$ less concise ($\sim$) $<$ concise ($\checkmark$)
-	\item \ms{adoption}: less adopted (\ding{55}) $<$ well adopted ($\checkmark$)
+	\item \ms{UF-L} (constraint formulation level): low-level (\ding{55}) vs. high-level ($\checkmark$)
+	\item \ms{UF-I} (intuitiveness): not intuitive (\ding{55}) $<$ less intuitive ($\sim$) $<$ intuitive ($\checkmark$)
+	\item \ms{UF-C} (conciseness): not concise (\ding{55}) $<$ less concise ($\sim$) $<$ concise ($\checkmark$)
+	\item \ms{UF-A} (adoption): less adopted (\ding{55}) $<$ well adopted ($\checkmark$)
 \end{itemize}
 
-We evaluated the five most important DSCLs according to these criteria:
+We evaluated the five most important DSCLs according to these user-friendliness classes:
 
 \begin{user-fiendliness}
-level & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & \ding{55} \\
-intuitiveness & $\sim$ & $\sim$ & $\sim$ & $\checkmark$ & \ding{55} \\
-conciseness & \ding{55} & $\checkmark$ & $\sim$ & $\checkmark$ & \ding{55} \\
-adoption & \ding{55} & $\checkmark$ & \ding{55} & \ding{55} & $\checkmark$ \\
+\ms{UF-L} & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & \ding{55} \\
+\ms{UF-I} & $\sim$ & $\sim$ & $\sim$ & $\checkmark$ & \ding{55} \\
+\ms{UF-C} & \ding{55} & $\checkmark$ & $\sim$ & $\checkmark$ & \ding{55} \\
+\ms{UF-A} & \ding{55} & $\checkmark$ & \ding{55} & \ding{55} & $\checkmark$ \\
 \end{user-fiendliness}
 
-SPIN is in contrast to the other DSCLs a general-purpose low-level language, as it is the most expressive one.
+SPIN is in contrast to the other DSCLs a general-purpose low-level language, as it is the most expressive one (\ms{UF-L}).
 As SPARQL queries may be very long and complex, the purpose of constraints expressed in SPIN may not be immediately clear to human readers.
 On the other side, ShEx is the most intuitive DSCL, since it is based on regular expressions and since well-known constructs of other languages\footnote{e.g. numbers standing for min, max, and exact cardinality in UML} are part of the language definition.
-DSP, ReSh, as well as OWL 2 are not that intuitive than ShEx, but more intuitive to humans than SPIN\footnote{see the examples of the requirement \ms{allowed values} in the paper of Bosch et al. \cite{BoschNolleAcarEckert2015}\label{footnoteIntuitivenessConciseness}}.
-In most cases, the same constraints can be expressed more concise in OWL 2 and ShEx than in DSP and SPIN\footref{footnoteIntuitivenessConciseness}.
-The only well adopted and therefore well known DSCLs are SPIN and most of all OWL 2.
+DSP, ReSh, as well as OWL 2 are not that intuitive than ShEx, but more intuitive to humans than SPIN\footnote{see the examples of the requirement \ms{allowed values} in the paper of Bosch et al. \cite{BoschNolleAcarEckert2015}\label{footnoteIntuitivenessConciseness}} (\ms{UF-I}).
+In most cases, the same constraints can be expressed more concise in OWL 2 and ShEx than in DSP and SPIN\footref{footnoteIntuitivenessConciseness} (\ms{UF-C}).
+The only well adopted and therefore well known DSCLs are SPIN and most of all OWL 2 (\ms{UF-A}).
 
-These criteria could also be evaluated more fine granular for each constraint (and not only for each DSCL).
-Tools could then recommend for each criterion or in total which DSCL to use in order to express a particular constraint or sets of constraints. 
+These user-friendliness classes could also be evaluated more fine granular for each constraint (and not only for each DSCL).
+Tools could then recommend for each user-friendliness class or in total which DSCL to use in order to express a particular constraint or sets of constraints. 
 
 \subsection{Overall Classification}
 
